<resources>
    <string name="app_name">CommCare Survey Manager</string>
    <string name="action_logout">Logout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_sync">Sync</string>
    <string name="action_clear_db">Clear Local DB</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="favourite">favourite</string>
    <string name="selected_app">No App Selected</string>
    <string name="selected_project">Selected Project</string>
    <string name="app_details_label">App Details will be shown here</string>
    <string name="app_name_sample">Sample App Name</string>
    <string name="built_on">built on</string>
    <string name="build_comment">build comment</string>
    <string name="version">version</string>
    <!-- Sample App Names   -->
    <string-array name="app_names">
        <item>MIRA-RFMS FINAL</item>
        <item>MIRA-RFMS FINAL2</item>
    </string-array>
    <!-- Sample Project Names   -->
    <string-array name="project_names">
        <item>mira-rfms</item>
        <item>some-other-project</item>
    </string-array>
</resources>