<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kuyodynamics.commcaresurveymanager.core.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.CommCareSurveyManager.AppBarOverlay">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSecondary"
                android:minHeight="?attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:popupTheme="@style/Theme.CommCareSurveyManager.PopupOverlay" />

            <!--            appId = it.appId,-->
            <!--            name = it.name,-->
            <!--            buildComment = it.buildComment,-->
            <!--            builtOn = it.builtOn,-->
            <!--            isReleased = it.isReleased,-->
            <!--            version = it.version-->


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/app_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <!--                 Card Title: App Name-->
                    <TextView
                        android:id="@+id/commcare_app_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name_sample"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_conversion_absoluteHeight="28dp"
                        tools:layout_conversion_absoluteWidth="411dp"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="56dp" />
                    <!--                 Card Title: Details-->
                    <TextView
                        android:id="@+id/commcare_app_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_details_label"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/commcare_app_name"
                        tools:layout_conversion_absoluteHeight="19dp"
                        tools:layout_conversion_absoluteWidth="411dp"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="56dp" />

                    <Spinner
                        android:id="@+id/project_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/selected_project"
                        android:minHeight="48dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/commcare_app_details"
                        tools:ignore="RedundantDescriptionCheck"
                        tools:layout_conversion_absoluteHeight="48dp"
                        tools:layout_conversion_absoluteWidth="0dp"
                        tools:layout_editor_absoluteX="8dp"
                        tools:layout_editor_absoluteY="56dp" />

                    <Spinner
                        android:id="@+id/app_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/selected_app"
                        android:minHeight="48dp"
                        app:layout_constraintBottom_toBottomOf="@+id/project_spinner"
                        app:layout_constraintStart_toEndOf="@+id/project_spinner"
                        app:layout_constraintTop_toTopOf="@+id/project_spinner"
                        tools:ignore="RedundantDescriptionCheck"
                        tools:layout_conversion_absoluteHeight="48dp"
                        tools:layout_conversion_absoluteWidth="0dp"
                        tools:layout_editor_absoluteX="8dp"
                        tools:layout_editor_absoluteY="56dp" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/favourite"
                        android:src="@drawable/ic_baseline_favorite"
                        android:tintMode="add"

                        app:layout_constraintBottom_toBottomOf="@+id/app_spinner"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/app_spinner"
                        app:srcCompat="@drawable/ic_baseline_favorite"
                        tools:srcCompat="@drawable/ic_baseline_favorite"
                        app:tint="#FFFFFF" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>